--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <head>
     <meta charset="UTF-8">
     <title>🍔 Gitonga First Website</title>
+        <style>
+        background-color: powderblue;
+        </style>
 </head>
 <body>
     <table cellspacing="20">
