--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <meta charset="UTF-8">
     <title>🍔 Gitonga First Website</title>
         <style>
-            {
-        background-color: powderblue;
+            body {
+            background-color: powderblue;
             }
         </style>
 </head>
