--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <table cellspacing="20">
         <tr>
-            <td><img src="https://davidgitonga.weebly.com/uploads/1/0/8/5/108580287/editor/res-1500288435716-1.jpg?1500461510" alt="david profile pic"></td>
+            <td><img src="https://www.upwork.com/freelancers/~01d3a0354945da6503"></td>
             <td><h1>David Gitonga</h1>
                 <p><em>Founder and CTO <strong> <a href="https://www.startersdiary.com">Starters Diary</a></strong>.</em></p> 
                  <p>I am an SEO expert with a passion for helping businesses improve their online presence. With years of experience in the industry, we have the knowledge and skills to get your website ranking higher in search engines like Google.</p></td>
