--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>🍔 Gitonga First Website</title>
         <style>
             body {
-            background-color: blue;
+            background-color: powderblue;
             }
         </style>
 </head>
