--- a/index.html
+++ b/index.html
@@ -14,7 +14,38 @@
             <td><img src="https://www.upwork.com/profile-portraits/c16B91SCIeSh4QhyewoMHT8AYvsEWeVoIBDT9OMDv58XxR2WARIjQFngQ3Tln0BxcM"></td>
             <td><h1>David Gitonga</h1>
                 <p><em>Founder and CTO <strong> <a href="https://www.startersdiary.com">Starters Diary</a></strong>.</em></p> 
-                 <p>I am an SEO expert with a passion for helping businesses improve their online presence. With years of experience in the industry, we have the knowledge and skills to get your website ranking higher in search engines like Google.</p></td>
+                 <p>Hello, I am an experienced content writer with excellent SEO skills. I will provide you with SEO-optimized content that will drive traffic to your money website.
+
+High ranking on Google + increased traffic equals more money on your websites). What’s the secret?
+
+Relevant, useful, and informative content!
+
+Let's make money!
+
+I am a talented freelancer passionate about
+
+• SEO Content Writing
+• Blog writing
+• Article writing
+• Keyword Research
+• Internet research
+• Web content writing
+• Writing landing page content
+• City Pages SEO
+• Product descriptions
+• Data entry
+• ChatGPT Content Editor
+• Generative AI
+
+I am A Masters Degree Holder with over 8 years of experience working for startups and multinationals. I have participated in projects in various niches and achieved great success.
+
+I am Looking at establishing a Solid Relationship with my clients based on Trust and Quality Submissions. Timeliness and Keenness to meet my client's Goal define my Work.
+
+I provide content that is rich in SEO, 100% unique, and in good grammar. I understand Affiliate marketing, Content marketing, and Yoast SEO, among several other skills.
+
+So are you looking for Quality Work? Trust me. I am the one you need. Check my portfolio, let's connect!
+
+less</p></td>
         </tr>
     </table>
     
