--- a/index.html
+++ b/index.html
@@ -22,20 +22,22 @@ Relevant, useful, and informative content!
 
 Let's make money!
 
-I am a talented freelancer passionate about
+I am a talented freelancer passionate about:
+                     
+<ul>
+    <li>Blog writing</li>
+    <li>Article writing</li>
+    <li>Keyword Research</li>
+    <li>Internet research</li>
+    <li>Web content writing</li>
+    <li>Writing landing page content</li>
+    <li>City Pages SEO</li>
+    <li>Product descriptions</li>
+    <li>Data entry</li>
+    <li>ChatGPT Content Editor</li>
+    <li>Generative AI</li>
+</ul>
 
-• SEO Content Writing
-• Blog writing
-• Article writing
-• Keyword Research
-• Internet research
-• Web content writing
-• Writing landing page content
-• City Pages SEO
-• Product descriptions
-• Data entry
-• ChatGPT Content Editor
-• Generative AI
 
 I am A Masters Degree Holder with over 8 years of experience working for startups and multinationals. I have participated in projects in various niches and achieved great success.
 
