--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
     <meta charset="UTF-8">
-    <title>🍔 Gitonga First Website</title>
+    <title> Gitonga First Website</title>
 </head>
 <body style="background-color: powderblue;">
     <table>
@@ -11,7 +11,8 @@
     </td>
         <td>
             <h1>David Gitonga</h1>
-            <p><em>Founder and CTO <strong> <a href="https://www.startersdiary.com">Starters Diary</a></strong>.</em></p>
+            <p><em> Creative Content Writer/Editor | SEO | Generative-AI Expert.
+                Founder and CTO <strong> <a href="https://www.startersdiary.com">Starters Diary</a></strong>.</em></p>
         </td>
              
     
