--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     
    
     <hr>
-        <h3>Why Us</h3>
+        <h3>Why Me</h3>
     <ol>
         <li>Intelligent</li>
         <li>Experienced</li>
@@ -68,8 +68,9 @@
     <h3>Work Experience</h3>
     <table border="10px">
         <thead>
-<th>Dates</th>
-<th>Work</th>
+            <th>Dates</th>
+            <th>Project</th>
+            <th>Client Feedback</th>
         </thead>
         <tbody>
 
@@ -78,15 +79,16 @@
 
         </tfoot>
         <tr>
-            <td>
-                2010-2013
-            </td>
-            <td>Fisherman at Kanyoo River</td>
+            <td>Jan 27, 2022 - Dec 6, 2022</td>
+            <td>Writer desired to write blog posts for Heating/plumbing & AC company</td>
+            <td>Gitonga was an incredible asset as we were building our content marketing business. He played an integral part and helped our clients, through his writing, shine. Thank you Gitonga, I would highly recommend you"
+            
         </tr>
         <tr><td>
             2013-2017
-        </td>
-        <td>Online Article Writer</td></tr>
+            </td>
+        <td>Online Article Writer</td>
+        </tr>
     </table>
     <hr>
 <h3>Skills</h3>
