--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         </tr>
         <tr>
             <td>Mar, 2020 - Mar, 2022 </td>
-            <td>writing assignments - from articles, blogposts, PR and Web page content</td>
+            <td>Writing assignments - from articles, blogposts, PR and Web page content</td>
             <td>"I hired Gitonga for many writing assignments - from articles, blogposts, PR and Web page content. I am still working with him on several assignments. He is reliable, flexible, very responsive. I highly recommend him for any writing task."
 
 Dwivedi A. | SEO Manager</td>
